--- a/.eslintrc
+++ b/.eslintrc
@@ -61,12 +61,15 @@
     "react/no-array-index-key": 0,
     "no-promise-executor-return": 0,
     "no-else-return": 0,
+    "import/order": 0,
     "arrow-body-style": 0,
     "react/require-default-props": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-props-no-spreading": 0,
     "import/prefer-default-export": 0,
     "react/function-component-definition": 0,
+    "react/jsx-curly-brace-presence": 0,
+    "react/self-closing-comp": 0,
     "jsx-a11y/control-has-associated-label": 0,
     "react/jsx-no-useless-fragment": [
       1,
