--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@mui/x-date-pickers": "^6.17.0",
     "apexcharts": "^3.43.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "firebase": "^10.5.2",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.15.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
