--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,7 @@
     "react/function-component-definition": 0,
     "react/jsx-curly-brace-presence": 0,
     "react/self-closing-comp": 0,
+    "react/no-unused-prop-types": "off",
     "jsx-a11y/control-has-associated-label": 0,
     "react/jsx-no-useless-fragment": [
       1,
